# controller

./: Cargo.toml  Dockerfile  Dockerfile-goreleaser  README.md  go.mod  main.go
cmd/: cmd.go
script/: build.sh  docker.sh
src/arg/: arg.rs
src/config/: config.yml
tests/: config.yml  invalid.yml
