[package]
name = "controller"
version = "0.0.1"
edition = "2021"
rust-version = "1.59"
authors = ["Jia Jia <angersax@sina.com>"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
description = "build controller"
repository = "https://github.com/distbuild/controller"
documentation = "https://github.com/distbuild/controller"
homepage = "https://github.com/distbuild/controller"
keywords = ["build", "controller"]
categories = ["build"]
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "controller"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"

[dependencies]
clap = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[badges]
maintenance = { status = "actively-developed" }
